Tiger/Grammar/output/TigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g 2017-02-22 16:59:54

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

 
using System;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Tiger 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
 internal  partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_DECLARATION", "AND", "ARRAY", "ARRAY_ACCESS", "ARRAY_CREATION", "ARRAY_DECLARATION", "ASG", "BACKSLASH", "BREAK", "COMMA", "COMMENT", "DDOT", "DIFF", "DIGIT", "DO", "DOT", "ELSE", "END", "EQUAL", "ESC_SEQ", "EXPRESSION_LIST", "FIELD_INIT_PAIR", "FOR", "FOR_VAR_DECLARATION", "FUNCTION", "FUNCTION_ARGS_DECLARATIONS", "FUNCTION_CALL", "FUNCTION_CALL_ARGS", "FUNCTION_DECLARATION", "FUNCTION_DECLARATION_SEQUENCE", "FUNCTION_VAR_TYPE_DECLARATION", "GETHAN", "GTHAN", "HEX_DIGIT", "ID", "IF", "IF_THEN", "IF_THEN_ELSE", "IN", "INT", "LBRACK", "LET", "LETHAN", "LETTER", "LET_DECLARATIONS", "LET_IN_END", "LET_VAR_DECLARATION", "LKEY", "LPAR", "LTHAN", "MINUS", "MINUS_EXPRESSION", "NIL", "OF", "OR", "PLUS", "QUOTE", "RBRACK", "RECORDS_CREATION_FIELDS", "RECORDS_FIELDS_DECLARATIONS", "RECORD_CREATION", "RECORD_FIELD_ACCESS", "RECORD_TYPE_DECLARATION", "RECORD_VAR_DECLARATION", "RKEY", "RPAR", "SEMI", "SLASH", "STAR", "STRING", "THEN", "TO", "TYPE", "TYPE_DECLARATION_SEQUENCE", "VAR", "VARIABLE_DECLARATION_SEQUENCE", "VARIABLE_GET", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ALIAS_DECLARATION=4;
	public const int AND=5;
	public const int ARRAY=6;
	public const int ARRAY_ACCESS=7;
	public const int ARRAY_CREATION=8;
	public const int ARRAY_DECLARATION=9;
	public const int ASG=10;
	public const int BACKSLASH=11;
	public const int BREAK=12;
	public const int COMMA=13;
	public const int COMMENT=14;
	public const int DDOT=15;
	public const int DIFF=16;
	public const int DIGIT=17;
	public const int DO=18;
	public const int DOT=19;
	public const int ELSE=20;
	public const int END=21;
	public const int EQUAL=22;
	public const int ESC_SEQ=23;
	public const int EXPRESSION_LIST=24;
	public const int FIELD_INIT_PAIR=25;
	public const int FOR=26;
	public const int FOR_VAR_DECLARATION=27;
	public const int FUNCTION=28;
	public const int FUNCTION_ARGS_DECLARATIONS=29;
	public const int FUNCTION_CALL=30;
	public const int FUNCTION_CALL_ARGS=31;
	public const int FUNCTION_DECLARATION=32;
	public const int FUNCTION_DECLARATION_SEQUENCE=33;
	public const int FUNCTION_VAR_TYPE_DECLARATION=34;
	public const int GETHAN=35;
	public const int GTHAN=36;
	public const int HEX_DIGIT=37;
	public const int ID=38;
	public const int IF=39;
	public const int IF_THEN=40;
	public const int IF_THEN_ELSE=41;
	public const int IN=42;
	public const int INT=43;
	public const int LBRACK=44;
	public const int LET=45;
	public const int LETHAN=46;
	public const int LETTER=47;
	public const int LET_DECLARATIONS=48;
	public const int LET_IN_END=49;
	public const int LET_VAR_DECLARATION=50;
	public const int LKEY=51;
	public const int LPAR=52;
	public const int LTHAN=53;
	public const int MINUS=54;
	public const int MINUS_EXPRESSION=55;
	public const int NIL=56;
	public const int OF=57;
	public const int OR=58;
	public const int PLUS=59;
	public const int QUOTE=60;
	public const int RBRACK=61;
	public const int RECORDS_CREATION_FIELDS=62;
	public const int RECORDS_FIELDS_DECLARATIONS=63;
	public const int RECORD_CREATION=64;
	public const int RECORD_FIELD_ACCESS=65;
	public const int RECORD_TYPE_DECLARATION=66;
	public const int RECORD_VAR_DECLARATION=67;
	public const int RKEY=68;
	public const int RPAR=69;
	public const int SEMI=70;
	public const int SLASH=71;
	public const int STAR=72;
	public const int STRING=73;
	public const int THEN=74;
	public const int TO=75;
	public const int TYPE=76;
	public const int TYPE_DECLARATION_SEQUENCE=77;
	public const int VAR=78;
	public const int VARIABLE_DECLARATION_SEQUENCE=79;
	public const int VARIABLE_GET=80;
	public const int WHILE=81;
	public const int WS=82;

	 public  TigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	 public  TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g"; } }

	 
	public override string GetErrorMessage( RecognitionException e, string[] token)
	{
	    string message = base.GetErrorMessage(e, token);
	    Errors.Add(new Error(e,message));
	    return message;
	}
	public List<Error> Errors { get; set; }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:210:8: public program : expression EOF !;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> expression1 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree EOF2_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(210, 21);
		try
		{
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:211:5: ( expression EOF !)
			DebugEnterAlt(1);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:211:7: expression EOF !
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(211, 7);
			PushFollow(Follow._expression_in_program1389);
			expression1=expression();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, expression1.Tree);
			DebugLocation(211, 21);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program1391); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(211, 21);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_expression();
	partial void LeaveRule_expression();

	// $ANTLR start "expression"
	// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:213:1: expression : or ;
	[GrammarRule("expression")]
	private AstParserRuleReturnScope<CommonTree, IToken> expression()
	{
		EnterRule_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> or3 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(213, 8);
		try
		{
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:214:5: ( or )
			DebugEnterAlt(1);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:214:7: or
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(214, 7);
			PushFollow(Follow._or_in_expression1404);
			or3=or();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, or3.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			LeaveRule_expression();
		}
		DebugLocation(214, 8);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return retval;

	}
	// $ANTLR end "expression"

	partial void EnterRule_or();
	partial void LeaveRule_or();

	// $ANTLR start "or"
	// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:216:1: or : and ( OR ^ and )* ;
	[GrammarRule("or")]
	private AstParserRuleReturnScope<CommonTree, IToken> or()
	{
		EnterRule_or();
		EnterRule("or", 3);
		TraceIn("or", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken OR5 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> and4 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> and6 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree OR5_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "or");
		DebugLocation(216, 20);
		try
		{
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:217:5: ( and ( OR ^ and )* )
			DebugEnterAlt(1);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:217:7: and ( OR ^ and )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(217, 7);
			PushFollow(Follow._and_in_or1416);
			and4=and();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, and4.Tree);
			DebugLocation(217, 11);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:217:11: ( OR ^ and )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:217:12: OR ^ and
					{
					DebugLocation(217, 14);
					OR5=(IToken)Match(input,OR,Follow._OR_in_or1419); if (state.failed) return retval;
					if (state.backtracking == 0) {
					OR5_tree = (CommonTree)adaptor.Create(OR5);
					root_0 = (CommonTree)adaptor.BecomeRoot(OR5_tree, root_0);
					}
					DebugLocation(217, 16);
					PushFollow(Follow._and_in_or1422);
					and6=and();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, and6.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("or", 3);
			LeaveRule("or", 3);
			LeaveRule_or();
		}
		DebugLocation(217, 20);
		} finally { DebugExitRule(GrammarFileName, "or"); }
		return retval;

	}
	// $ANTLR end "or"

	partial void EnterRule_and();
	partial void LeaveRule_and();

	// $ANTLR start "and"
	// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:219:1: and : comparison ( AND ^ comparison )* ;
	[GrammarRule("and")]
	private AstParserRuleReturnScope<CommonTree, IToken> and()
	{
		EnterRule_and();
		EnterRule("and", 4);
		TraceIn("and", 4);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken AND8 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> comparison7 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> comparison9 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree AND8_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "and");
		DebugLocation(219, 35);
		try
		{
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:220:5: ( comparison ( AND ^ comparison )* )
			DebugEnterAlt(1);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:220:7: comparison ( AND ^ comparison )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(220, 7);
			PushFollow(Follow._comparison_in_and1436);
			comparison7=comparison();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, comparison7.Tree);
			DebugLocation(220, 18);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:220:18: ( AND ^ comparison )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==AND))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:220:19: AND ^ comparison
					{
					DebugLocation(220, 22);
					AND8=(IToken)Match(input,AND,Follow._AND_in_and1439); if (state.failed) return retval;
					if (state.backtracking == 0) {
					AND8_tree = (CommonTree)adaptor.Create(AND8);
					root_0 = (CommonTree)adaptor.BecomeRoot(AND8_tree, root_0);
					}
					DebugLocation(220, 24);
					PushFollow(Follow._comparison_in_and1442);
					comparison9=comparison();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, comparison9.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("and", 4);
			LeaveRule("and", 4);
			LeaveRule_and();
		}
		DebugLocation(220, 35);
		} finally { DebugExitRule(GrammarFileName, "and"); }
		return retval;

	}
	// $ANTLR end "and"

	partial void EnterRule_comparison();
	partial void LeaveRule_comparison();

	// $ANTLR start "comparison"
	// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:222:1: comparison : arithmetic ( relational_operation ^ arithmetic )? ;
	[GrammarRule("comparison")]
	private AstParserRuleReturnScope<CommonTree, IToken> comparison()
	{
		EnterRule_comparison();
		EnterRule("comparison", 5);
		TraceIn("comparison", 5);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, IToken> arithmetic10 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> relational_operation11 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> arithmetic12 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		try { DebugEnterRule(GrammarFileName, "comparison");
		DebugLocation(222, 52);
		try
		{
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:223:5: ( arithmetic ( relational_operation ^ arithmetic )? )
			DebugEnterAlt(1);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:223:7: arithmetic ( relational_operation ^ arithmetic )?
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(223, 7);
			PushFollow(Follow._arithmetic_in_comparison1456);
			arithmetic10=arithmetic();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, arithmetic10.Tree);
			DebugLocation(223, 18);
			// C:\\Users\\Cesar\\Desktop\\TIGER-AndyGonzalez(C412)-YamileReynoso(C412)\\Codigo\\Tiger\\Tiger\\Grammar\\Tiger.g:223:18: ( relational_operation ^ arithmetic )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);
